Commit pulido, con un swagger y estilización más completas.
